--- a/PW4_Siadro/PW4_Siadro.csproj
+++ b/PW4_Siadro/PW4_Siadro.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="PW5Lib">
+      <HintPath>..\..\..\PW5_Siadro\PW5_Siadro\PW5Lib\PW5Lib\bin\Debug\net8.0\PW5Lib.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
